# notifications-api-common

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  pyright.pyproject.toml  ruff.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml
docs/: conf.py  delivery_guarantees.rst  index.rst  logging.rst  notifications.rst  quickstart.rst  setup_config.rst
notifications_api_common/: __init__.py  admin.py  admin_filters.py  apps.py  autoretry.py  client.py  cloudevents.py  exponential_backoff.py  kanalen.py  models.py  settings.py  task.py  tasks.py  utils.py  validators.py  views.py  viewsets.py
notifications_api_common/api/: serializers.py
notifications_api_common/contrib/setup_configuration/: models.py  steps.py
notifications_api_common/locale/en/LC_MESSAGES/: django.mo  django.po
notifications_api_common/locale/nl/LC_MESSAGES/: django.mo  django.po
notifications_api_common/management/commands/: clean_failed_notifications.py  clean_old_notifications.py  generate_notificaties.py  register_kanaal.py  register_kanalen.py
notifications_api_common/migrations/: 0001_initial.py  0002_notificationsconfig_notifications_api_service.py  0003_migrate_api_root.py  0004_remove_notificationsconfig_api_root.py  0005_auto_20220810_0950.py  0006_auto_20221018_1406.py  0006_auto_20221213_0214.py  0007_auto_20221206_0414.py  0008_merge_0006_auto_20221213_0214_0007_auto_20221206_0414.py  0009_add_subscription_identifier.py  0010_notificationsconfig_notification_delivery_base_factor.py  0010_notificationsconfig_notification_delivery_base_factor_and_more.py  0011_notification_notificationresponse.py
notifications_api_common/templates/admin/notifications_api_common/notification/: submit_line.html
notifications_api_common/templates/notifications_api_common/: kanalen.html  master.html
notifications_api_common/templates/notifications_api_common/ref/: kanalen.html
notifications_api_common/templatetags/: notifications_api_common.py
notifications_api_common/tests/: test_exponential_backoff.py  test_models.py  utils.py
testapp/: api.py  celery.py  models.py  settings.py  urls.py  views.py
tests/: conftest.py  test_clean_failed_notifications.py  test_clean_old_notifications.py  test_cloudevent_error_queue.py  test_cloudevent_utils.py  test_configuration_steps.py  test_exponential_backoff.py  test_generate_notificaties.py  test_kanaal_documentation.py  test_notification_admin.py  test_notification_error_queue.py  test_notifications.py  test_register_kanalen.py  test_register_webhook.py  test_send_cloudevent.py  test_send_message.py  test_serializers.py  test_subscription_configuration_steps.py  test_utils.py  test_validators.py
tests/files/: setup_config_notifications_config.yaml  setup_config_notifications_config_no_service.yaml  setup_config_subscriptions_config.yaml
