[build-system]
requires = ["setuptools >= 77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notifications-api-common"
version = "0.10.1"
description = "Re-usable integration layer for the Common Ground Notifications API specification."
authors = [
    {name = "Maykin Media", email = "support@maykinmedia.nl"}
]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["notifications", "REST", "API", "Common Ground", "ZGW"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.0",
    "django-solo",
    "djangorestframework>=3.12.0",
    "celery",
    "djangorestframework_camel_case>=1.2.0",
    "zgw-consumers>=1.0.0",
    "ape-pie",
    "structlog",
]

[project.urls]
Homepage = "https://github.com/maykinmedia/notifications-api-common"
Documentation = "https://notifications-api-common.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/maykinmedia/notifications-api-common/issues"
"Source Code" = "https://github.com/maykinmedia/notifications-api-common"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true
zip-safe = false

[project.optional-dependencies]
db = ["psycopg2"]
tests = [
    "psycopg2",
    "pytest",
    "pytest-django",
    "freezegun",
    "tox",
    "ruff",
    "zgw-consumers[testutils]>=0.35.1"
]
type-checking = [
    "pyright",
    "django-stubs",
    "django-stubs-ext",
]
coverage = ["pytest-cov"]
setup-configuration = [
    "django-setup-configuration>=0.7.0",
    "furl"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]
release = [
    "bump-my-version",
    "twine"
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "testapp.settings"


# Bumpversion configuration

[tool.bumpversion]
current_version = "0.10.1"
files = [
    {filename = "pyproject.toml"},
    {filename = "README.rst"},
    {filename = "docs/conf.py"},
    {filename = "notifications_api_common/__init__.py"},
    {filename = "notifications_api_common/locale/en/LC_MESSAGES/django.po"},
    {filename = "notifications_api_common/locale/nl/LC_MESSAGES/django.po"},
]


[tool.coverage.run]
branch = true
source = ["notifications_api_common"]
patch = ["subprocess"]
omit = [
    # migrations run while django initializes the test db
    "*/migrations/*",
]

[tool.coverage.report]
skip_covered = true
exclude_also = [
    "if (typing\\.)?TYPE_CHECKING:",
    "@(typing\\.)?overload",
    "class .*\\(.*Protocol.*\\):",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "\\bpass$",
]


[tool.ruff]
# Exclude folders and files
exclude = [
    "migrations",
    "static",
    "media",
]

# Same as Black
line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I",
    # https://docs.astral.sh/ruff/rules/#error-e
    "E",
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F",
    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SIM",
    # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PERF",
    # https://docs.astral.sh/ruff/rules/#refurb-furb
    "FURB",
    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "B006",
    "B010",
    # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "N",
    "TID251"
]

ignore = [
    # Checks for assertRaises and pytest.raises context managers that catch Exception or BaseException.
    "B017",
    # Checks for useless expressions.
    "B018",
    # Checks for raise statements in exception handlers that lack a from clause.
    "B904",
    # Whitespace before ':' (conflicts with Black)
    "E203",
    # Checks for lines that exceed the specified maximum character length.
    "E501",
    # Do not assign a lambda expression
    "E731",
    # Name may be undefined from '*' import
    "F405",
    # Checks for CamelCase imports that are aliased to lowercase names
    "N813",
    # Checks for CamelCase imports that are aliased to constant-style names.
    "N814",
    # Checks for class variable names that follow the mixedCase convention
    "N815",
    # Exception name should be named with Error suffix
    "N818",
    # Checks for instance methods that use a name other than self for their first argument.
    "N805",
    # Checks for the use of non-lowercase variable names in functions
    "N806",
    # Checks for functions names that do not follow the snake_case naming convention.
    "N802",
    # Checks for module names that do not follow the snake_case naming convention or are otherwise invalid.
    "N999",
    # Checks for for loops that can be replaced by a list comprehension.
    "PERF401",
    # Checks for `if` statements that can be replaced with bool
    "SIM103",
    # Check for if-else-blocks that can be replaced with a ternary operator
    "SIM108",
    #Check for environment variables that are not capitalized.
    "SIM112",
    # Checks for nested if statements that can be collapsed into a single if statement
    "SIM102",
    # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "SIM117",
]


# Import sorting configuration (equivalent to isort)
[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = false
known-first-party = ["notifications_api_common"]
lines-after-imports = -1
relative-imports-order = "furthest-to-closest"
sections = { django = ["django"] }
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api.logging]
msg = "Use `structlog.stdlib.get_logger(__name__)` instead."

[tool.ruff.format]
line-ending = "lf"

[tool.setuptools.package-data]
notifications_api_common = ["py.typed"]

[tool.django-stubs]
django_settings_module = "testapp.settings"