# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = notifications-api-common
version = 0.8.2
description = Re-usable integration layer for the Common Ground Notifications API specification.
long_description = file: README.rst
url = https://github.com/maykinmedia/notifications-api-common
project_urls =
    Changelog = https://github.com/maykinmedia/notifications-api-common/blob/main/CHANGELOG.rst
    Bug Tracker = https://github.com/maykinmedia/notifications-api-common/issues
    Source Code = https://github.com/maykinmedia/notifications-api-common
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = notifications, REST, API, Common Ground, ZGW
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django>=4.2.0
    django-solo
    djangorestframework>=3.12.0
    celery
    djangorestframework_camel_case>=1.2.0
    zgw-consumers>=1.0.0
    ape-pie
tests_require =
    psycopg2
    pytest
    pytest-django
    freezegun
    tox
    ruff
    zgw-consumers[testutils]>=1.0.0

[options.packages.find]
include =
    notifications_api_common
    notifications_api_common.*

[options.extras_require]
db =
    psycopg2
tests =
    psycopg2
    pytest
    pytest-django
    freezegun
    tox
    ruff
    zgw-consumers[testutils]>=0.35.1

coverage = pytest-cov
setup-configuration =
    django-setup-configuration>=0.7.0
    furl
docs =
    sphinx
    sphinx-rtd-theme
release =
    bump-my-version
    twine

# 3rd party configuration

[aliases]
test=pytest

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings
